Remove deprecated -Xverify:none option
Closes #11773.